<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2009 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<!--balloon:按键时键盘选择键位时弹起的放大效果
    【简称：泡泡效果，设置false时键盘字母的“泡泡效果”会消失。其他特殊功能键需要单独设置true/false才能生效】-->
<keyboard
  skb_template="@xml/skb_template1"
  skb_cache_flag="true"
  qwerty="true"
  qwerty_uppercase="true"
  width="10%p"
  height="25%p"
  key_type="0"
  repeat="false"
  balloon="false">

  <row>
    <keys splitter="|" labels="Q|W|E|R|T|Y|U|I|O|P"
      codes="45|51|33|46|48|53|49|37|43|44"/>
  </row>

  <row start_pos_x="4.078%p" width="10.205%p">
    <keys splitter="|" labels="A|S|D|F|G|H|J|K|L"
      codes="29|47|32|34|35|36|38|39|40"/>
  </row>

  <row width="10.205%p">
    <!--<key label="，" width="14.286%p" icon="@drawable/comma_full_popup_icon"-->
      <!--icon_popup="@drawable/comma_full_popup_icon"> -->
    <key label="，" width="14.286%p">
      <toggle_state state_id="@string/toggle_smiley" code="-6"
        icon="@drawable/smiley_icon" icon_popup="@drawable/smiley_popup_icon"
        key_type="2"/>
      <toggle_state state_id="@string/toggle_en_lower" code="-1"
        icon="@drawable/shift_off_icon"
        icon_popup="@drawable/shift_off_icon" key_type="1"/>
      <toggle_state state_id="@string/toggle_en_upper" code="-1"
        icon="@drawable/shift_on_icon"
        icon_popup="@drawable/shift_on_icon" key_type="1"/>
      <toggle_state state_id="@string/toggle_cn_cand" label="'"
        key_type="1"/>
    </key>
    <keys splitter="|" labels="Z|X|C|V|B|N|M"
      codes="54|52|31|50|30|42|41"/>
    <key id="3"/>
  </row>

  <row width="20%p" row_id="@string/toggle_row_cn">
    <key id="6"/>
    <key id="4"/>
    <key code="62" key_type="1" width="34%p" label="空格"/>
    <key label="。" width="12%p"/>
    <key id="8"/>
    <key id="1"/>
  </row>

  <row width="20%p" row_id="@string/toggle_row_en" start_pos_y="75%p">
    <key id="6"/>
    <key id="4"/>
    <key code="62" key_type="1" width="34%p" label="空格"/>
    <key id="7"/>
    <key id="8"/>
    <key id="1"/>
  </row>

  <row width="20%p" row_id="@string/toggle_row_uri" start_pos_y="75%p">
    <key id="6"/>
    <key id="4"/>
    <key label="/" width="12%p"/>
    <key code="62" key_type="1" width="22%p" label="空格"/>
    <key id="7"/>
    <key id="8"/>
    <key id="1"/>
  </row>

  <row width="20%p" row_id="@string/toggle_row_emailaddress" start_pos_y="75%p">
    <key id="6"/>
    <key id="4"/>
    <key label="\@" width="12%p"/>
    <key code="62" key_type="1" width="22%p" label="空格"/>
    <key id="7"/>
    <key id="8"/>
    <key id="1"/>
  </row>
</keyboard>

